# canvas

./: .gitignore  .travis.yml  Cargo.toml  Changes.md  LICENSE  README.md  Readme.md
.github/workflows/: rust.yml
canvas/: Cargo.toml  Changes.md  Readme.md
canvas/benchmarks/: bitpack.rs  conversion.rs  expand.rs  intcast.rs
canvas/docs/: eerht-mod-tutorials.md  eno-problems.md  mod.rs  orez-table-of-contents.md
canvas/examples/: convert-bgra.rs  show-oklab.rs  show-srlab2.rs
canvas/src/: arch.rs  bits.rs  color.rs  color_matrix.rs  frame.rs  layout.rs  lib.rs  math.rs  shader.rs  tests.rs
canvas/src/arch/: x86_avx2.rs  x86_ssse3.rs
canvas/src/color/: oklab.rs  srlab2.rs  transfer.rs  yuv.rs
canvas/src/layout/: upsampling.rs
drm/: Cargo.toml  Readme.md
drm/src/: lib.rs
frame/: Cargo.toml  Readme.md
frame/src/: buffer.rs  buffered.rs  color.rs  convert.rs  frame.rs  layout.rs  lib.rs  shader.rs
framebuf/: Cargo.toml  Readme.md
framebuf/benchmarks/: conversion.rs
framebuf/src/: color.rs  color_matrix.rs  frame.rs  layout.rs  lib.rs  shader.rs  tests.rs
framebuf/src/color/: oklab.rs
matrix-slice/: Cargo.toml  Readme.md
matrix-slice/src/: lib.rs
src/: buf.rs  bytes.rs  canvas.rs  color.rs  drm.rs  layout.rs  lib.rs  matrix.rs  pixel.rs  rec.rs  stride.rs  texel.rs
texel/: Cargo.toml  Changes.md  README.md  Readme.md
texel/src/: arc.rs  buf.rs  canvas.rs  image.rs  layout.rs  lib.rs  matrix.rs  rec.rs  stride.rs  texel.rs
texel/src/image/: atomic.rs  cell.rs  data.rs  raw.rs  unaligned.rs
texel/src/layout/: matrix.rs  planar.rs  relocated.rs  upsampling.rs
texel/tests/: atomic.rs  data_transfer.rs  texel.rs
