[package]
name = "image-canvas"
description = "An allocated buffer suitable for image data."
version = "0.0.2"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/image-canvas"
categories = ["multimedia::images"]

[lib]
name = "canvas"

[dependencies]
zerocopy = "0.2.2"
