[package]
name = "image-canvas"
description = "An allocated buffer suitable for image data."
version = "0.0.6"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/image-canvas"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[lib]
name = "canvas"

[dependencies]
bytemuck = "1.1"
