[package]
name = "image-canvas"
version = "0.4.3"
edition = "2021"

description = "A color-aware texel buffer."
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/image-canvas"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[dependencies]
image-texel = { path = "../texel", version = "0.3.0" }
bytemuck = "1.1"

[dev-dependencies]
brunch = "0.6.1"
[dev-dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[[bench]]
name = "bitpack"
path = "benchmarks/bitpack.rs"
harness = false

[[bench]]
name = "conversion"
path = "benchmarks/conversion.rs"
harness = false

[[bench]]
name = "intcast"
path = "benchmarks/intcast.rs"
harness = false
