[package]
name = "image-canvas"
version = "0.5.1"
edition = "2021"

description = "A color-aware texel buffer."
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/image-canvas"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[dependencies]
image-texel = { path = "../texel", version = "0.5.0" }
bytemuck = "1.1"
libm = { version = "0.2", default-features = false, features = ["arch"] }

[features]
# Use runtime feature detection on x86 and x86_64 targets.
runtime-features = []

[dev-dependencies]
brunch = "0.6.1"
[dev-dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[[bench]]
name = "bitpack"
path = "benchmarks/bitpack.rs"
harness = false

[[bench]]
name = "conversion"
path = "benchmarks/conversion.rs"
harness = false

[[bench]]
name = "intcast"
path = "benchmarks/intcast.rs"
harness = false
