[package]
name = "image-texel"
version = "0.2.0"
edition = "2018"
rust-version = "1.61"

description = "A texel type and allocated buffers suitable for image data."
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/image-texel"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[dependencies]
bytemuck = "1.3"

[dev-dependencies.bytemuck]
version = "1.3"
features = ["derive"]
