[package]
name = "image-texel"
version = "0.3.1"
edition = "2021"
rust-version = "1.77"

description = "A texel type and allocated buffers suitable for image data."
authors = ["Aurelia Molzer <andreas.molzer@gmx.de>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/image-texel"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[dependencies]
bytemuck = "1.3"

[dev-dependencies.bytemuck]
version = "1.3"
features = ["derive"]
