[package]
name = "image-texel"
version = "0.5.0"
edition = "2021"
rust-version = "1.84"

description = "A texel type and allocated buffers suitable for image data."
authors = ["Aurelia Molzer <5550310+HeroicKatora@users.noreply.github.com>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/image-texel"
repository = "https://github.com/image-rs/canvas"
categories = ["multimedia::images"]

[dependencies]
bytemuck = "1.3"

[dev-dependencies.bytemuck]
version = "1.3"
features = ["derive"]
